--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="popup popup--telegram">
             <img class="popup__logo" src="assets/150898219_10464249.png" alt="telegram Logo">
             <h1>Unete a nuestro canal de telegram</h1>
-            <h2>Tu acceso directo a descuentos increíbles y novedades que no querrás perderte.</h2>
+            <h2>Tu acceso directo a descuentos irresistibles y novedades que no querrás perderte.</h2>
             <div class="popup__buttons">
                 <a class="popup__unirse" target="_blank" href="#">Unirse</a>
             </div>
