--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <div class="popup_container popup_container--telegram">
         <div class="popup popup--telegram">
+            <div class="close_button_container"> <button class="close_button">x</button></div>
             <img class="popup__logo" src="assets/150898219_10464249.png" alt="telegram Logo">
             <h1>Únete a nuestro canal de telegram</h1>
             <h2>Tu acceso directo a descuentos irresistibles y novedades que no querrás perderte.</h2>
