--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <div class="popup_container popup_container--telegram">
         <div class="popup popup--telegram">
             <div class="close_button_container"> <button class="close_button">x</button></div>
-            <img class="popup__logo" src="assets/telegram-verde.png" alt="telegram Logo">
+            <img class="popup__logo" src="assets/telegram-icono-blanco.png" alt="telegram Logo">
             <h1>Únete a nuestro canal de telegram</h1>
             <h2>Tu acceso directo a descuentos irresistibles y novedades que no querrás perderte.</h2>
             <div class="popup__buttons">
                 <a class="popup__unirse" target="_blank" href="#">Unirse</a>
             </div>
-            <a class="popup__politica" href="https://cogollocbd.es/content/8-politica-de-privacidad">Consulta nuestra política de privacidad</a>
+            <a class="popup__politica-telegram" href="https://cogollocbd.es/content/8-politica-de-privacidad">Consulta nuestra política de privacidad</a>
     </div>
     <script src="popup.js"></script>
 </body>
