--- a/index.html
+++ b/index.html
@@ -7,10 +7,21 @@
     <title>Document</title>
 </head>
 <body>
+    <nav class="navbar">
+        <a class="navbar_link" href="index.html">Mockup 1</a>
+        <a class="navbar_link" href="index-2.html">Mockup 2</a>
+        <a class="navbar_link" href="index-3.html">Mockup 3</a>
+    </nav>
     <div class="popup_container popup_container--telegram">
         <div class="popup popup--telegram">
             <div class="close_button_container"> <button class="close_button">x</button></div>
-            <img class="popup__logo" src="assets/telegram-icono-blanco.png" alt="telegram Logo">
+            <div>
+                <div class="logo_outer_container">
+                    <div class="logo_container">
+                        <img class="popup__logo" src="assets/Vector-7.svg" alt="telegram Logo">
+                    </div>
+                </div>
+            </div>
             <h1>Únete a nuestro canal de telegram</h1>
             <h2>Tu acceso directo a descuentos irresistibles y novedades que no querrás perderte.</h2>
             <div class="popup__buttons">
