--- a/index-2.html
+++ b/index-2.html
@@ -138,7 +138,7 @@
 }
 
 .popup__politica-telegram{
-    color: #fff;
+    color: #014A0C;
     font-size: 1rem!important;
     font-style: italic;
     font-weight: 300;
