--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <div id="telegramPopupOverlay" class="telegram-popup-overlay">
         <div class="telegram-popup-container">
             <button class="btn_ocultar"><img src="assets/Frame.svg" alt=""> Ocultar</button>
+            <div class="btn_cross">
+                <button>X</button>
+            </div>
             <div class="telegram-popup-content">      
                 <div class="popup-main-body">
                     <div class="popup-left-graphic">
