--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                             <span class="text">De descuento exclusivo</span>
                         </div>
                         <p class="next-order">En tu próximo pedido <span class="cart-icon"><img src="assets/carrito.svg" alt=""></span></p>
-                        <a href="#" target="_blank" class="join-telegram-btn">
+                        <a href="https://t.me/+ILUc0TBbWMcxZjlk" target="_blank" class="join-telegram-btn">
                             <span class="telegram-icon"><img src="assets/telegram Logo.svg" alt=""></span> Unirse
                         </a>
                     </div>
