--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="popup.css">
 </head>
 <body>
+<div>
     <div class="btn_telegram">
         <button><img src="assets/telegram Logo.svg" alt=""></button>
     </div>
@@ -49,6 +50,7 @@
             </div>
         </div>
     </div>
+</div>
 <script src="popup.js"></script>
 </body>
 </html>
